BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Contract_Partner_vod__c.object
<CustomObject>
    <description>Child of the Contract_vod object. One row represents an entity (Account) who has been associated to a Contract.</description>
    <fields>
        <fullName>Acceptance_ID_vod__c</fullName>
        <description>To be filled to enable the partner record if no signature is captured.</description>
        <label>Acceptance #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Identifier_vod__c</fullName>
        <description>Additional Account Identifier.</description>
        <formula>Account_vod__r.Account_Identifier_vod__c</formula>
        <label>Account Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the associated Account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Contract_Partners_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acknowledgment_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I have read and understood</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement_vod__c</fullName>
        <formula>Contract_vod__r.Agreement_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call2_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associates a Contract Partner record to a Call</description>
        <label>Call</label>
        <referenceTo>Call2_vod__c</referenceTo>
        <relationshipName>Contract_Partner_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to corresponding Contract header.</description>
        <label>Contract</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>((1 AND 2) OR (3 AND 4) OR ( NOT (1 OR 2 OR 3 OR 4))) AND 5 AND 6</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sales_vod</value>
            </filterItems>
            <filterItems>
                <field>Contract_vod__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sales_vod</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Listing_vod</value>
            </filterItems>
            <filterItems>
                <field>Contract_vod__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Listing_vod</value>
            </filterItems>
            <filterItems>
                <field>Contract_vod__c.Template_vod__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>Contract_vod__c.Agreement_vod__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contract_vod__c</referenceTo>
        <relationshipName>Contract_Partners_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Device_Type_vod__c</fullName>
        <description>Used to capture the device used to generate the record.</description>
        <label>Device Type</label>
        <picklist>
            <picklistValues>
                <fullName>iPad_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WinModern_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data_Load_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disclaimer_vod__c</fullName>
        <description>Stores a snapshot of the disclaimer that was presented at the signature time.</description>
        <label>Disclaimer</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EM_Speaker_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to associate a contract with a speaker for Veeva Event Management.</description>
        <label>Service Provider</label>
        <referenceTo>EM_Speaker_vod__c</referenceTo>
        <relationshipLabel>Contract Recipients</relationshipLabel>
        <relationshipName>Contract_Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date_vod__c</fullName>
        <description>Auto-populated by Contract Header; stores and shows the Contract end date.</description>
        <formula>Contract_vod__r.End_Date_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expired_vod__c</fullName>
        <formula>End_Date_vod__c &lt; TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expired?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID is used for data loading only.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Formatted_Name_vod__c</fullName>
        <description>This formula field is used to display a well formatted person account name in (lastname, firstname suffix) format.</description>
        <formula>IF( Account_vod__r.IsPersonAccount, Account_vod__r.LastName &amp; &quot;, &quot; &amp; Account_vod__r.FirstName &amp; IF(ISNULL(Account_vod__r.Suffix_vod__c), &quot;&quot;, &quot; &quot; &amp; Account_vod__r.Suffix_vod__c), Account_vod__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formatted Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the record cannot be edited.</description>
        <label>Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_Created_Datetime_vod__c</fullName>
        <description>Date and time the Contract Partner was created on the mobile device.</description>
        <label>Mobile Created Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mobile_Last_Modified_Datetime_vod__c</fullName>
        <description>Date and time the Contract Partner was last modified on the mobile device.</description>
        <label>Mobile Last Modified Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This allows a non-Admin User to make changes to a Activated Contract Partner records. This is only intended for integration and/or custom pages/coding and should not be placed on the page layout.</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signature_Datetime_vod__c</fullName>
        <description>Stores when the signature has been captured.</description>
        <label>Signature Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Signature_vod__c</fullName>
        <description>Stores the captured signature.</description>
        <label>Signature</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Signee_vod__c</fullName>
        <description>Stores and show the name of the signee.</description>
        <label>Signee</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_vod__c</fullName>
        <description>Auto-populated by Contract Header; stores and shows the Contract start date.</description>
        <formula>Contract_vod__r.Start_Date_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Stores the status of a Contract Partner record. If the status is &quot;Activated&quot; and the current date is between the Contract Partner start and end dates, the Contract associated with the Contract Partner record can be associated with an Order or Inventory Monitoring.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Rejected_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saved_vod</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Activated_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Signature_vod__c</fullName>
        <description>Stores user&apos;s signature.</description>
        <label>User Signature</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the User record in SFDC</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contract Recipient</label>
    <nameField>
        <displayFormat>CP-{000000000}</displayFormat>
        <label>Contract Partner ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Recipients</pluralLabel>
    <recordTypes>
        <fullName>Activity_Agreement_EBD</fullName>
        <active>true</active>
        <description>Corresponding recordtype for contract = Activity_Agreement_EBD</description>
        <label>Activity Agreement for Exhibits &amp; Displays (Events)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Activity_Agreement_Services</fullName>
        <active>true</active>
        <description>CP Recordtype for Activity Agreement for Services (SOW)</description>
        <label>Activity Agreement for Services (SOW)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Activity_Agreement_Sponsorship</fullName>
        <active>true</active>
        <description>CP rectype for Activity_Agreement_Sponsorship</description>
        <label>Activity Agreement for Sponsorship</label>
    </recordTypes>
    <recordTypes>
        <fullName>EM_Speaker_Contract_vod</fullName>
        <active>true</active>
        <description>Used to associate a contract with a speaker.</description>
        <label>EM_Speaker_Contract_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Framework_Agreement</fullName>
        <active>true</active>
        <description>Corresponding recordtype for Contract - Framework Agreement</description>
        <label>Framework Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Listing_vod</fullName>
        <active>true</active>
        <description>Used to relate an account to a Listing Contract.</description>
        <label>Listing_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_vod</fullName>
        <active>true</active>
        <description>Used to relate an Account to a Sales Contract.</description>
        <label>Sales_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>SponsorshipLetter_HCPTS</fullName>
        <active>true</active>
        <description>CP Recordtype for Contract rectype of SponsorshipLetter</description>
        <label>SponsorshipLetter</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>End_Date_After_Start_Date</fullName>
        <active>true</active>
        <description>End Date must be later than Start Date.</description>
        <errorConditionFormula>End_Date_vod__c &lt; Start_Date_vod__c</errorConditionFormula>
        <errorMessage>The End Date cannot be before the Start Date.</errorMessage>
    </validationRules>
</CustomObject>